created a config file and centralized references to process.env. ...

--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
 HTTPS=true
 PUBLIC_URL = ''
-REACT_APP_3DHOP_ROOT = 'https://3dhop.net/distribution/latest'
+REACT_APP_3DHOP_SOURCE = 'https://3dhop.net/distribution/latest'
+REACT_APP_3DHOP_MODELS = 'https://localhost:5001/nxz'
