--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 HTTPS=true
 PUBLIC_URL = ''
-REACT_APP_3DHOP_SOURCE = 'https://3dhop.net/distribution/latest'
+REACT_APP_3DHOP_SOURCE = 'https://inventart.onrender.com/3DHOP'
 REACT_APP_3DHOP_MODELS = 'https://inventart-api.azurewebsites.net/nxz'
