--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
 HTTPS=true
 PUBLIC_URL = ''
-REACT_APP_3DHOP_SOURCE = 'https://3dhop.net/distribution/latest'
+REACT_APP_3DHOP_SOURCE = 'https://localhost:3000/3DHOP'
 REACT_APP_3DHOP_MODELS = 'https://localhost:5001/nxz'
