now getting the link to the 3d model from the api endpoint

--- a/.env.development
+++ b/.env.development
@@ -2,3 +2,4 @@ HTTPS=true
 PUBLIC_URL = ''
 REACT_APP_3DHOP_SOURCE = 'https://localhost:3000/3DHOP'
 REACT_APP_3DHOP_MODELS = 'https://localhost:5001/nxz'
+REACT_APP_API_ENDPOINT = 'https://localhost:5001'
