--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ HTTPS=true
 PUBLIC_URL = ''
 REACT_APP_3DHOP_SOURCE = 'https://inventart.onrender.com/3DHOP'
 REACT_APP_3DHOP_MODELS = 'https://inventart-api.azurewebsites.net/nxz'
+REACT_APP_API_ENDPOINT = 'https://inventart-api.azurewebsites.net'
