--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ PUBLIC_URL = ''
 REACT_APP_3DHOP_SOURCE = 'https://inventart.onrender.com/3DHOP'
 REACT_APP_3DHOP_MODELS = 'https://inventart-api.azurewebsites.net/nxz'
 REACT_APP_API_ENDPOINT = 'https://inventart-api.azurewebsites.net'
+REACT_APP_AUTH0_DOMAIN = 'inventart.eu.auth0.com'
+REACT_APP_AUTH0_CLIENT_ID = 'cv8UtbPJzKH02dEHvERbBUOhowwi6Q4T'
+REACT_APP_AUTH0_AUDIENCE = 'https://inventart-api/'
