--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^1.4.0",
     "@material-table/core": "^2.3.29",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
