moving away from azurewebsites and into digital ocean

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 HTTPS=true
 PUBLIC_URL = ''
 REACT_APP_3DHOP_SOURCE = 'https://inventart.onrender.com/3DHOP'
-REACT_APP_3DHOP_MODELS = 'https://inventart-api.azurewebsites.net/nxz'
-REACT_APP_API_ENDPOINT = 'https://inventart-api.azurewebsites.net'
+REACT_APP_3DHOP_MODELS = 'https://167.172.186.199:5001/models'
+REACT_APP_API_ENDPOINT = 'https://167.172.186.199:5001'
 REACT_APP_AUTH0_DOMAIN = 'inventart.eu.auth0.com'
 REACT_APP_AUTH0_CLIENT_ID = 'cv8UtbPJzKH02dEHvERbBUOhowwi6Q4T'
 REACT_APP_AUTH0_AUDIENCE = 'https://inventart-api/'
