--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "@types/react": "^17.0.5",
     "axios": "^0.21.1",
     "delay": "^5.0.0",
+    "i18next": "^20.2.2",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.8.15",
     "react-responsive-canvas": "^1.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
